--- a/blank.yml
+++ b/blank.yml
@@ -9,24 +9,24 @@ on:
   pull_request:
     branches: [ master ]
 
-# Выполнение рабочего процесса состоит из одного или нескольких заданий, которые могут выполняться последовательно или параллельно
+# Йобс - одно или несколько последовательно - параллельных заданий.
 jobs:
-  # Этот рабочий процесс содержит одно задание под названием "сборка"
+  # Буилд - задание под названием "сборка"
   build:
-    # Тип бегуна, на котором будет выполняться задание
+    # Цикл, в котором выполняются задания
     runs-on: ubuntu-latest
 
-    # Шаги представляют собой последовательность задач, которые будут выполняться как часть задания
+    # Степс - Шаги задач, выполняются как часть задания
     steps:
-      # Проверяет ваш репозиторий в разделе $GITHUB_WORKSPACE, чтобы ваша работа могла получить к нему доступ
+      # Проверка репо для доступа к работе в разделе $GITHUB_WORKSPACE,
       - uses: actions/checkout@v2
 
       # Запускает одну команду с помощью оболочки runners
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Пуск однострочного скрипта
+        run: echo Привет, Мир!
 
       # Запускает набор команд с помощью оболочки runners
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Пуск многострочного скрипта
+        run: | 
+          echo Добавьте другие действия для сборки,
+          echo test, и разверните свой проект.
