--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
-  "name": "",
+  "name": "Просто песочница",
   "version": "1.0.0",
   "description": "поли-проба",
   "keywords": [],
   "main": "/index.html",
-  "dependencies": {}
+  "dependencies": {
+    "vue": "latest",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-scripts": "4.0.0"
+  },
+  "devDependencies": {
+    "serve": "^11.2.0",
+    "lz-string": "1.4.4",
+    "codesandbox": "1.1.13"
+  }
 }
