--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Просто песочница",
+  "name": "просто-песочница",
   "version": "1.0.0",
   "description": "поли-проба",
   "keywords": [],
