--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "просто-песочница",
+  "name": "experiment-po-pusku",
   "version": "1.0.0",
-  "description": "поли-проба",
+  "description": "Не работает",
   "keywords": [],
   "main": "/index.html",
   "dependencies": {
