--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "experiment-po-pusku",
+  "name": "polygraf",
   "version": "1.0.0",
   "description": "Не работает",
   "keywords": [],
