--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "keywords": [],
   "main": "/index.html",
   "dependencies": {
-    "vue": "latest",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-scripts": "4.0.0"
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-scripts": "4.0.3",
+    "vue": "2.6.12"
   },
   "devDependencies": {
     "serve": "^11.2.0",
